position using changes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
         </div>
         <div class="navbar__s3">
             <P>Courses</P>
-            <p>My Learning</p>
+            <!-- <p>My Learning</p> -->
+            <div class="mylearning">
+                <p>My Learning</p>
+                <div class="mylearning__popup">
+                    <p>you did not purchase anything yet</p>
+                </div>
+            </div>
             <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
             <i class="fa-solid fa-bell" style="color: #000000;"></i>
             <i class="fa-solid fa-user" style="color: #000000;"></i>
@@ -44,7 +50,10 @@
     <!--sale img-->
     <div class="sale-img">
         <img src="./images/sale-img.png" alt="sale-img">
-
+        <div class="sale-img__offer">
+            <h2>Udemy Flash Sale! 24 hours to save.</h2>
+            <p>Get the top course at 299. just one day offer</p>
+        </div>
     </div>
     <!--recommended-->
     <div class="recommended">
@@ -168,7 +177,7 @@
                 <p>Get the app</p>
                 <p>About us</p>
                 <p>Contact us</p>
-          
+
             </div>
             <div class="footer__one__s2">
                 <p>Careers</p>
